--- a/packages/app/templates/ui-extensions/projects/flow_template/shopify.ui.extension.toml.liquid
+++ b/packages/app/templates/ui-extensions/projects/flow_template/shopify.ui.extension.toml.liquid
@@ -1,5 +1,4 @@
-name="foo"
-title = "your-template-title"
-description = "your-template-description"
-workflow_id = "your-workflow-uuid"
-workflow_definition_version = "your-workflow_definition_version"
+name="{{ name }}"
+type="{{ type }}"
+
+description = "A description telling the merchant what your template does"
