--- a/packages/app/templates/extensions/projects/flow_template/shopify.extension.toml.liquid
+++ b/packages/app/templates/extensions/projects/flow_template/shopify.extension.toml.liquid
@@ -1,7 +1,10 @@
 name = "{{name}}"
+description = "A Flow Template example"
+
+[[extensions]]
+handle = "{{name}}"
 type = "flow_template"
 
-[template]
 # Required -- Can be overridden by translations, but used in Partner dashboard
 title = "My Awesome Template"
 
